# co-vision

./: .gitignore  CLAUDE.md  README.md  VISION_AI_COMPANION_RESEARCH.md  pyproject.toml  requirements-server.txt  runpod.json
.claude/: settings.local.json
configs/: default.yaml
docker/: Dockerfile  docker-compose.yml
models/: .gitkeep
scripts/: enroll_user.py  start_runpod.sh
server/: __init__.py  app.py
src/covision/: __init__.py  attention.py  camera.py  cli.py  demo.py  detector.py  events.py  pipeline.py  presence.py  recognizer.py  scene.py
src/covision/integrations/: __init__.py  feynman.py
tests/: __init__.py
web/: index.html
